// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ColorPopover to match snapshot (closed) 1`] = `
<div>
  <div
    class="relative"
  >
    <button
      class="btn btn-ghost border-base-300 border"
    >
      Color popover ↓
    </button>
  </div>
</div>
`;

exports[`ColorPopover to match snapshot (open) 1`] = `
<div>
  <div
    class="relative"
  >
    <button
      class="btn btn-ghost border-base-300 border"
    >
      Color popover ↓
    </button>
    <div
      class="bg-base-300 border-base-content/10 absolute top-full left-0 z-50 mt-2 w-56 rounded-2xl border p-4 shadow-xl"
    >
      <p
        class="text-base-content/50 mb-3 text-xs"
      >
        Choose accent color
      </p>
      <div
        class="flex flex-wrap gap-2"
      >
        <div
          class="hover:border-base-content h-8 w-8 cursor-pointer rounded-lg border-2 border-transparent transition-colors"
          style="background: rgb(201, 168, 76);"
          title="Gold"
        />
        <div
          class="hover:border-base-content h-8 w-8 cursor-pointer rounded-lg border-2 border-transparent transition-colors"
          style="background: rgb(111, 207, 164);"
          title="Teal"
        />
        <div
          class="hover:border-base-content h-8 w-8 cursor-pointer rounded-lg border-2 border-transparent transition-colors"
          style="background: rgb(111, 160, 207);"
          title="Blue"
        />
        <div
          class="hover:border-base-content h-8 w-8 cursor-pointer rounded-lg border-2 border-transparent transition-colors"
          style="background: rgb(207, 111, 111);"
          title="Red"
        />
        <div
          class="hover:border-base-content h-8 w-8 cursor-pointer rounded-lg border-2 border-transparent transition-colors"
          style="background: rgb(207, 159, 111);"
          title="Orange"
        />
        <div
          class="hover:border-base-content h-8 w-8 cursor-pointer rounded-lg border-2 border-transparent transition-colors"
          style="background: rgb(159, 111, 207);"
          title="Purple"
        />
      </div>
    </div>
  </div>
</div>
`;
